# cpu-emulator-2

./: README.md
assembler/: Cargo.toml  README.md
assembler/src/: assembler.rs  assembler_source.rs  expression.rs  instruction.rs  lexer.rs  linker.rs  main.rs  module.rs  opcode.rs  section.rs  size.rs  tokens.rs
assembler/src/assembler/: directive.rs  emit.rs  machine_code.rs  opcode_old.rs  parse.rs  symbol_table.rs
emulator/: .clang-format  CMakeLists.txt
emulator/src/: address_bus.c  address_bus.h  block.c  block.h  bus_device.c  bus_device.h  cpu.c  cpu.h  data_cache.c  data_cache.h  decode.c  decode.h  execute.c  execute.h  free_list.c  free_list.h  instruction.h  instruction_cache.c  instruction_cache.h  instructions.c  instructions.h  interrupt_flags.h  job_queue.c  job_queue.h  main.c  memory.c  memory.h  thread_pool.c  thread_pool.h  threads.h
emulator/src/device/: test_device.c  test_device.h
emulator/src/devices/: memory.c  memory.h
emulator/src/platform/linux/: timer.c  timer.h
emulator/src/platform/macos/: timer.c  timer.h
emulator/src/sync/: spinlock.c  spinlock.h
emulator/src/util/: align.h  barrier.h  common.h  types.h
