[package]
name = "assembler"
version = "0.1.0"
edition = "2024"

[build]
rustflags = ["-C", "target-feature=+avx2"]

[profile.dist]
inherits = "release"
strip = true 
lto = "thin"
codegen-units = 1

[profile.reldeb]
inherits = "release"
strip = false
debug = true
panic = "unwind"

[dependencies]
anyhow = "1.0.99"
bitflags = "2.9.4"
clap = { version = "4.5.47", features = ["derive"] }
itertools = "0.14.0"
spdlog-rs = {version = "0.4.3", features = ["release-level-warn"]}
strum = { version = "0.27.2", features = ["derive"] }
